@@ -1534,3 +1534,24 @@
 
 (pushnew "XLIB" custom:*system-package-list* :test #'string=)
 (pushnew "XPM" custom:*system-package-list* :test #'string=)
+
+;; some functions are not implemented:
+(eval-when (compile)
+  (defmacro undefined (name)
+    `(define-compiler-macro ,name (&whole form &rest args)
+       (declare (ignore args))
+       (progn (warn "~S is not implemented: ~S" ',name form)
+              form))))
+(without-package-lock ("XLIB")
+(undefined XLIB:DISPLAY-RESOURCE-ID-BASE)
+(undefined XLIB:DISPLAY-RESOURCE-ID-MASK)
+(undefined XLIB:DISPLAY-TRACE)
+(undefined XLIB:DRAW-IMAGE-GLYPH)
+(undefined XLIB:TRANSLATE-DEFAULT)
+(undefined XLIB:QUEUE-EVENT)
+(undefined XLIB:CHANGE-KEYBOARD-MAPPING)
+(undefined XLIB:KEYBOARD-MAPPING)
+(undefined XLIB:SHAPE-EXTENTS)
+(undefined XLIB:SHAPE-RECTANGLES)
+(undefined XLIB:DEFAULT-KEYSYM-INDEX)
+)
