@@ -13,6 +13,7 @@
 	(RESOLVE-HOST-IPADDR): updated to use hostent_to_lisp()
 	* modules/clx/new-clx/configure.in: check for socket headers
 	* modules/clx/new-clx/clx.lisp (ACCESS-CONTROL): new defsetf
+	mark non-implemented functions with compiler macros
 	* modules/clx/new-clx/clx.f (POINTER-CONTROL): fixed STACK cleanup
 	(check_on_off): YES->ON
 	(MODIFIER-MAPPING): C arrays are base 0, not base 1
